Fix image button on ios theme.
fixes #168

--- a/src/main/java/com/googlecode/mgwt/ui/client/theme/platform/button/imagebutton-ios.css
+++ b/src/main/java/com/googlecode/mgwt/ui/client/theme/platform/button/imagebutton-ios.css
@@ -1,2 +1,16 @@
 @def ICON_BACKGROUND_COLOR #0D66FB;
 @def ICON_BACKGROUND_COLOR_HIGHLIGHT #B2D0F7;
+
+
+.mgwt-ImageButton {
+  color: #0c63fe;
+  background-color: #f2f2f2;
+  box-shadow: none;
+  border: none;
+}
+
+.mgwt-ImageButton-active {
+  box-shadow: none;
+  background-color: white;
+  color: ICON_BACKGROUND_COLOR_HIGHLIGHT;
+}
